# libmoniq

./: .gitignore  CMakeLists.txt  README.md
src/libmoniq/: monitor_log.h  monitor_queue.cpp  monitor_queue.h
src/libmoniq/util/: extract_only_naive_message_adaptor.h  message_adaptor.h  naive_message_adaptor.cpp  naive_message_adaptor.h  naive_message_generator.cpp  naive_message_generator.h
src/libmoniq/writer/: monitor_log_writer.cpp  monitor_log_writer.h
src/libmoniq/writer/write_strategy/: console_monitor_log_write_strategy.cpp  console_monitor_log_write_strategy.h  monitor_log_write_strategy.h
